src/css/3-screens/3-s.css
/**********************************************************************************
 * S sized screen - Smartphone in landscape orientation
 **********************************************************************************/
@media screen and (min-width: 35.5em) {
	.ajax-loader-spinning {width: 163px;}

/*============== Buttons ==============*/
	.button-scroll-to-top {
		bottom: 75px;
		font-size: 2.5em;
		right: 40px;
	}


/*==============  Breadcrumbs ==============*/
	.breadcrumbs ul {
		margin-left: 6px;
		margin-right: 6px;
	}
	.breadcrumbs ul li {display: inline;}


/*============== Pages ==============*/
	.content {
		/* 100% - header-height - footer - player - self padding */
		min-height: calc(100vh - 64px - 40px - 40px - 26px);
		padding: 16px 24px 10px;
	}

	.content-discography .album-contents-wrapper {flex-flow: row;}
	.content-discography .album-cover {
		flex-flow: row;
		margin: 24px 22px 0 0;
	}

	.content-tune .tune-release-info {margin-bottom: 0;}
	.content-tune .tune-original-title {margin: 0 6px;}
	.content-tune .tune-links {margin-top: 8px;}

	.content-version-super-wrapper {
		align-items: flex-start;
		flex-flow: row;
	}
	.content-version .version-info {
		border-left: 1px solid;
		border-top: none;
		margin: 0 0 0 24px;
		padding-left: 24px;
	}

/*==============  Playlist ==============*/
	.menu-playlist {height: calc(100vh - 40px - 50px - 96px);} /* 100% - footer - search - header */
	.menu-playlist-wrapper .playlist-search input {
		margin: 12px 16px 0 16px;
		padding: 6px 8px;
	}
	.menu-playlist .playlist-info {padding-left: 10px;}



/*==============  Player ==============*/
	.player .playlist, .player .player-controls .player-button {padding: 0 15px;}

	.player .track-progress-bar-container {
		display: inline-flex;
		padding: 0 10px;
	}
	.player .total-time::before {
		content: "/";
		margin: 5px;
	}


/*==============  Footer ==============*/
	footer .social-icons a {padding: 0 15px;}
	footer .copyright {margin-right: 15px;}
	footer .copyright-first-year, footer .copyright-ds {display: inline;}
}


/**********************************************************************************
 * NEGATIVE S
 **********************************************************************************/
@media screen and (max-width: 47.99em) {
	.header-container .logo {
		margin-right: auto;
	}

	.header-button .icon {padding: 6px;}
	.header-button.selected .icon {
		border-bottom: 2px solid;
		padding-bottom: 4px;
	}

	.header-button > .fa-chevron-down,
	.header-button > .fa-chevron-up {
		display: none;
	}

	.header-super-wrapper > .menu-wrapper > .menu > ul {padding-top: 24px;}

	.content-lyrics .lyrics-wrapper:first-child .title {margin-top: 0;}
}

/**********************************************************************************
 * ONLY S
 **********************************************************************************/
@media screen and (min-width: 35.5em) and (max-width: 47.99em) {
	.toggle-wrapper .header-button {margin-right: 6px;}
	.toggle-wrapper:last-child .header-button {margin-right: 12px;}

	.menu li > .menu-item {margin: 0 24px;}

	/* non-playlist item */
	.menu:not(.menu-playlist) li > .menu-item {padding: 10px 8px;}
	/* playlist item */
	.menu-playlist .playlist-info, .menu-playlist .playlist-title {
		padding-bottom: 10px;
		padding-top: 10px;
	}

	.content-tune .tune-links li {margin: 10px 4px;}
}

